@@ -3,6 +3,12 @@ X3 ChangeLog
 
 2007-06-08  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
 
+	* src/mod-webtv.c: Added JOIN and PART.
+
+	* src/mod-webtv.help: Added JOIN and PART.
+
+2007-06-08  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
+
 	* src/mod-webtv.c: Added NICK and WHOIS commands. As well as 2 x3.conf
 	config options, required_mark and valid_marks.
 
